# vecu_cluster

./: .gitignore  LICENSE  README.md  Virtual ECU Multi-Container Cluster.md  execution.md
.devcontainer/ubuntu/: Dockerfile  devcontainer.json
android/: Dockerfile  start-gui.sh
android/.devcontainer/: Dockerfile  devcontainer.json  start-gui.sh
android/apps/: BUILD_APK.md  RUN_APK.md
android/apps/ledflash/: settings.gradle
android/apps/ledflash/app/: build.gradle
android/apps/ledflash/app/src/main/: AndroidManifest.xml
android/apps/ledflash/app/src/main/java/com/example/ledflash/: LedFlashService.java  MainActivity.java
android/apps/ledflash/app/src/main/res/layout/: activity_main.xml
android/apps/speedreceiver/: settings.gradle
android/apps/speedreceiver/app/: build.gradle
android/apps/speedreceiver/app/src/main/: AndroidManifest.xml
android/apps/speedreceiver/app/src/main/java/com/example/speedreceiver/: MainActivity.java  SpeedReceiverService.java
autosar_adaptive/: CMakeLists.txt  Dockerfile  README.md
autosar_adaptive/.devcontainer/: devcontainer.json
autosar_adaptive/ara/com/: mockup_com.cpp
autosar_adaptive/include/: mockup_com.hpp
autosar_adaptive/src/: main.cpp
autosar_adaptive/tasks/: RUN_TASK.md  vehicle_speed_service.cpp
freertos/: CMakeLists.txt  Dockerfile  FreeRTOSConfig.h
freertos/.devcontainer/: Dockerfile  devcontainer.json
freertos/src/: main.c
freertos/tasks/: RUN_TASK.md  vehicle_speed_task.c
ubuntu/.devcontainer/: Dockerfile  devcontainer.json
